--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,116 @@
-.hello {
-  color: red;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+  background-color: #eee;
+  position: relative;
+  color: #303133;
+}
+
+.header {
+  height: 65px;
+  line-height: 65px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.08);
+  background-color: #fff;
+  padding-left: 20px;
+  font-size: 18px;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+}
+.word{
+  height: 100%;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.container {
+  position: absolute;
+  top: 80px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  padding-top: 20px;
+}
+
+.qrcodeContainer {
+  text-align: center;
+}
+
+.qrcode {
+  width: 400px;
+  height: 400px;
+}
+
+.card {
+  border-radius: 4px;
+  border: 1px solid #ebeef5;
+  background-color: #fff;
+  overflow: hidden;
+  color: #303133;
+  box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+  width: 80%;
+  margin: 20px auto;
+}
+
+.cardTitle {
+  width: 100%;
+  border-bottom: 1px solid #ebeef5;
+  padding: 15px;
+  font-size: 1em;
+}
+
+.cardInfo {
+  padding: 15px;
+  font-size: 0.9em;
+}
+
+.cardInfo .label {
+  width: 65px;
+  margin-right: 10px;
+  text-align: right;
+  display: inline-block;
+}
+
+.cardInfo p {
+  width: 100%;
+  margin: 10px 0;
+}
+
+.cardButton {
+  text-align: center;
+}
+
+.changePortButton {
+  display: inline-block;
+  line-height: 1;
+  white-space: nowrap;
+  cursor: pointer;
+  background: #fff;
+  border: 1px solid #dcdfe6;
+  border-color: #dcdfe6;
+  color: #fff;
+  background-color: #409eff;
+  border-color: #409eff;
+  text-align: center;
+  box-sizing: border-box;
+  outline: none;
+  margin: 0;
+  font-weight: 500;
+  padding: 12px 20px;
+  font-size: 14px;
+  border-radius: 4px;
+}
+
+.changePortButton[disabled] {
+  color: #fff;
+  background-color: #a0cfff;
+  border-color: #a0cfff;
 }
