--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ html, body {
   left: 0;
   right: 0;
   background-color: #fff;
-  padding-top: 20px;
+  padding-top: 5px;
 }
 
 .qrcodeContainer {
@@ -61,7 +61,6 @@ html, body {
 }
 
 .cardTitle {
-  width: 100%;
   border-bottom: 1px solid #ebeef5;
   padding: 15px;
   font-size: 1em;
@@ -85,6 +84,7 @@ html, body {
 }
 
 .cardButton {
+  margin-bottom: 10px;
   text-align: center;
 }
 
@@ -113,4 +113,25 @@ html, body {
   color: #fff;
   background-color: #a0cfff;
   border-color: #a0cfff;
+}
+
+@font-face {
+  font-family: 'iconfont';  /* project id 710164 */
+  src: url('//at.alicdn.com/t/font_710164_eq4orv7o2cq.eot');
+  src: url('//at.alicdn.com/t/font_710164_eq4orv7o2cq.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_710164_eq4orv7o2cq.woff') format('woff'),
+  url('//at.alicdn.com/t/font_710164_eq4orv7o2cq.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_710164_eq4orv7o2cq.svg#iconfont') format('svg');
+}
+
+.iconfont {
+  font-family:"iconfont" !important;
+  font-size: 26px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.download {
+  float: right;
 }
